test(sitesearch): integration test for SiteSearchWebAPI view tool (#35786)
Adds SiteSearchWebAPITest covering the view-tool surface affected by the
neutral-aggregation refactor: search() (default-index, alias, pagination, empty
and error paths) with full SiteSearchResults/SiteSearchResult field assertions;
getAggregations() over the neutral Aggregation/AggregationBucket tree (terms,
nested top_hits, numeric-histogram getKeyAsNumber); and getFacets() across all
three legacy wrappers (string-terms, count-histogram, plain Facet fallback).
Registered in MainSuite1b alongside ContentSearchToolTest.

Also a minor List.getFirst() cleanup in SiteSearchAPIImpl.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>